StateDuino/src/gen/StateDuinoParser.java
// Generated from C:/Users/danie/Desktop/3. semester/ProjectKrea/StateDuino/src/StateDuino.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class StateDuinoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, STATE=2, STATEMACHINE=3, ONENTRY=4, ONREPEAT=5, ONEXIT=6, TRANSITIONS=7, 
		CHANGESTATE=8, NUMBER=9, BOOL=10, BREAK=11, CASE=12, CONST=13, ELSE=14, 
		ELSEIF=15, ENUM=16, FOR=17, IF=18, RETURN=19, WHILE=20, SWITCH=21, VOID=22, 
		DIGITALREAD=23, DIGITALWRITE=24, ANALOGREAD=25, ANALOGWRITE=26, HIGH=27, 
		LOW=28, DELAY=29, FUNCTION=30, DEFAULT=31, STRING_LITERAL=32, NUMBER_LITERAL=33, 
		BOOL_LITERAL=34, ID=35, LPAREN=36, RPAREN=37, LBRACE=38, RBRACE=39, LBRACK=40, 
		RBRACK=41, SEMI=42, COMMA=43, DOT=44, GT=45, LT=46, NOT=47, QUESTION=48, 
		COLON=49, EQUAL=50, LE=51, GE=52, NOTEQUAL=53, XOR=54, AND=55, OR=56, 
		INC=57, DEC=58, ADD=59, SUB=60, MUL=61, DIV=62, CARET=63, MOD=64, ADD_ASSIGN=65, 
		SUB_ASSIGN=66, ASSIGN=67, WS=68, COMMENT=69, LINE_COMMENT=70;
	public static final int
		RULE_prog = 0, RULE_stateMachine = 1, RULE_state = 2, RULE_stateBody = 3, 
		RULE_onEntry = 4, RULE_onRepeat = 5, RULE_onExit = 6, RULE_transitions = 7, 
		RULE_function = 8, RULE_statement = 9, RULE_ifStatement = 10, RULE_switchStatement = 11, 
		RULE_caseStatement = 12, RULE_defaultCaseStatement = 13, RULE_forStatement = 14, 
		RULE_whileStatement = 15, RULE_functionNames = 16, RULE_expression = 17, 
		RULE_voltage = 18, RULE_unary = 19, RULE_binary = 20, RULE_arithmetic = 21, 
		RULE_logical = 22, RULE_typeSpecifier = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stateMachine", "state", "stateBody", "onEntry", "onRepeat", 
			"onExit", "transitions", "function", "statement", "ifStatement", "switchStatement", 
			"caseStatement", "defaultCaseStatement", "forStatement", "whileStatement", 
			"functionNames", "expression", "voltage", "unary", "binary", "arithmetic", 
			"logical", "typeSpecifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'char'", "'state'", "'stateMachine'", "'onEntry'", "'onRepeat'", 
			"'onExit'", "'transitions'", "'changeState'", "'number'", "'bool'", "'break'", 
			"'case'", "'const'", "'else'", "'else if'", "'enum'", "'for'", "'if'", 
			"'return'", "'while'", "'switch'", "'void'", "'digitalRead'", "'digitalWrite'", 
			"'analogRead'", "'analogWrite'", "'HIGH'", "'LOW'", "'delay'", "'function'", 
			"'default'", null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "';'", "','", "'.'", "'>'", "'<'", "'!'", "'?'", "':'", "'=='", 
			"'<='", "'>='", "'!='", "'XOR'", null, null, "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'^'", "'%'", "'+='", "'-='", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "STATE", "STATEMACHINE", "ONENTRY", "ONREPEAT", "ONEXIT", 
			"TRANSITIONS", "CHANGESTATE", "NUMBER", "BOOL", "BREAK", "CASE", "CONST", 
			"ELSE", "ELSEIF", "ENUM", "FOR", "IF", "RETURN", "WHILE", "SWITCH", "VOID", 
			"DIGITALREAD", "DIGITALWRITE", "ANALOGREAD", "ANALOGWRITE", "HIGH", "LOW", 
			"DELAY", "FUNCTION", "DEFAULT", "STRING_LITERAL", "NUMBER_LITERAL", "BOOL_LITERAL", 
			"ID", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", 
			"COMMA", "DOT", "GT", "LT", "NOT", "QUESTION", "COLON", "EQUAL", "LE", 
			"GE", "NOTEQUAL", "XOR", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", 
			"DIV", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "ASSIGN", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StateDuino.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StateDuinoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public StateMachineContext stateMachine() {
			return getRuleContext(StateMachineContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(48);
				function();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			stateMachine();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateMachineContext extends ParserRuleContext {
		public TerminalNode STATEMACHINE() { return getToken(StateDuinoParser.STATEMACHINE, 0); }
		public TerminalNode ID() { return getToken(StateDuinoParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(StateDuinoParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(StateDuinoParser.SEMI, i);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public StateMachineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateMachine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterStateMachine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitStateMachine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitStateMachine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateMachineContext stateMachine() throws RecognitionException {
		StateMachineContext _localctx = new StateMachineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stateMachine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(STATEMACHINE);
			setState(57);
			match(ID);
			setState(58);
			match(LBRACE);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2161868688544835074L) != 0)) {
				{
				{
				setState(59);
				expression(0);
				setState(60);
				match(SEMI);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				state();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STATE );
			setState(72);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateContext extends ParserRuleContext {
		public TerminalNode STATE() { return getToken(StateDuinoParser.STATE, 0); }
		public TerminalNode ID() { return getToken(StateDuinoParser.ID, 0); }
		public StateBodyContext stateBody() {
			return getRuleContext(StateBodyContext.class,0);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(STATE);
			setState(75);
			match(ID);
			setState(76);
			stateBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(StateDuinoParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(StateDuinoParser.SEMI, i);
		}
		public OnEntryContext onEntry() {
			return getRuleContext(OnEntryContext.class,0);
		}
		public OnRepeatContext onRepeat() {
			return getRuleContext(OnRepeatContext.class,0);
		}
		public OnExitContext onExit() {
			return getRuleContext(OnExitContext.class,0);
		}
		public TransitionsContext transitions() {
			return getRuleContext(TransitionsContext.class,0);
		}
		public StateBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterStateBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitStateBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitStateBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateBodyContext stateBody() throws RecognitionException {
		StateBodyContext _localctx = new StateBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stateBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(LBRACE);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2161868688544835074L) != 0)) {
				{
				{
				setState(79);
				expression(0);
				setState(80);
				match(SEMI);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ONENTRY) {
				{
				setState(87);
				onEntry();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ONREPEAT) {
				{
				setState(90);
				onRepeat();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ONEXIT) {
				{
				setState(93);
				onExit();
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TRANSITIONS) {
				{
				setState(96);
				transitions();
				}
			}

			setState(99);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OnEntryContext extends ParserRuleContext {
		public TerminalNode ONENTRY() { return getToken(StateDuinoParser.ONENTRY, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public OnEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterOnEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitOnEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitOnEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OnEntryContext onEntry() throws RecognitionException {
		OnEntryContext _localctx = new OnEntryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_onEntry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ONENTRY);
			setState(102);
			match(LBRACE);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2161868688548898306L) != 0)) {
				{
				{
				setState(103);
				statement();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OnRepeatContext extends ParserRuleContext {
		public TerminalNode ONREPEAT() { return getToken(StateDuinoParser.ONREPEAT, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public OnRepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onRepeat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterOnRepeat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitOnRepeat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitOnRepeat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OnRepeatContext onRepeat() throws RecognitionException {
		OnRepeatContext _localctx = new OnRepeatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_onRepeat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ONREPEAT);
			setState(112);
			match(LBRACE);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2161868688548898306L) != 0)) {
				{
				{
				setState(113);
				statement();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OnExitContext extends ParserRuleContext {
		public TerminalNode ONEXIT() { return getToken(StateDuinoParser.ONEXIT, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public OnExitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onExit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterOnExit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitOnExit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitOnExit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OnExitContext onExit() throws RecognitionException {
		OnExitContext _localctx = new OnExitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_onExit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(ONEXIT);
			setState(122);
			match(LBRACE);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2161868688548898306L) != 0)) {
				{
				{
				setState(123);
				statement();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransitionsContext extends ParserRuleContext {
		public TerminalNode TRANSITIONS() { return getToken(StateDuinoParser.TRANSITIONS, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<TerminalNode> CHANGESTATE() { return getTokens(StateDuinoParser.CHANGESTATE); }
		public TerminalNode CHANGESTATE(int i) {
			return getToken(StateDuinoParser.CHANGESTATE, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(StateDuinoParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(StateDuinoParser.LPAREN, i);
		}
		public List<TerminalNode> ID() { return getTokens(StateDuinoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StateDuinoParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(StateDuinoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StateDuinoParser.COMMA, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> NUMBER_LITERAL() { return getTokens(StateDuinoParser.NUMBER_LITERAL); }
		public TerminalNode NUMBER_LITERAL(int i) {
			return getToken(StateDuinoParser.NUMBER_LITERAL, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(StateDuinoParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(StateDuinoParser.RPAREN, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(StateDuinoParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(StateDuinoParser.SEMI, i);
		}
		public TransitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterTransitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitTransitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StateDuinoVisitor ) return ((StateDuinoVisitor<? extends T>)visitor).visitTransitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransitionsContext transitions() throws RecognitionException {
		TransitionsContext _localctx = new TransitionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_transitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(TRANSITIONS);
			setState(132);
			match(LBRACE);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				match(CHANGESTATE);
				setState(134);
				match(LPAREN);
				setState(135);
				match(ID);
				setState(136);
				match(COMMA);
				setState(137);
				expression(0);
				setState(138);
				match(COMMA);
				setState(139);
				match(NUMBER_LITERAL);
				setState(140);
				match(RPAREN);
				setState(141);
				match(SEMI);
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CHANGESTATE );
			setState(147);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(StateDuinoParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(StateDuinoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StateDuinoParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(StateDuinoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(StateDuinoParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(StateDuinoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(StateDuinoParser.RBRACE, 0); }
		public List<TypeSpecifierContext> typeSpecifier() {
			return getRuleContexts(TypeSpecifierContext.class);
		}
		public TypeSpecifierContext typeSpecifier(int i) {
			return getRuleContext(TypeSpecifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(StateDuinoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StateDuinoParser.COMMA, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StateDuinoListener ) ((StateDuinoListener)listener).exitFunction(this);
		}
		@Override
